# truss

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/truss/: extract_issue.py  jira_extractor.py  review_pr.py  sentry_extractor.py
tests/: test_extract_issue.py  test_jira_extractor.py  test_review_pr.py  test_sentry_extractor.py
